Set max expire cache for static files

--- a/roles/nginx/templates/wordpress.conf.j2
+++ b/roles/nginx/templates/wordpress.conf.j2
@@ -5,6 +5,15 @@ location ~* /app/uploads/.*\.php$ {
   deny all;
 }
 
+# Set max cache for static files
+location ~* .(?:ogg|ogv|svg|svgz|eot|otf|woff|mp4|ttf|css|rss|atom|js|jpg|jpeg|gif|png|ico|zip|tgz|gz|rar|bz2|doc|xls|exe|ppt|tar|mid|midi|wav|bmp|rtf|cur)$ {
+  expires max;
+  log_not_found off;
+  access_log off;
+  add_header Pragma public;
+  add_header Cache-Control "public";
+}
+
 location / {
   try_files $uri $uri/ /index.php?$args;
 }
