Add text/javascript to gzip types

--- a/roles/nginx/templates/nginx.conf.j2
+++ b/roles/nginx/templates/nginx.conf.j2
@@ -186,6 +186,7 @@ http {
     image/x-icon
     text/cache-manifest
     text/css
+    text/javascript
     text/plain
     text/vcard
     text/vnd.rim.location.xloc
